WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
129987
iOS broken after
r165342
https://bugs.webkit.org/show_bug.cgi?id=129987
Summary
iOS broken after r165342
Jon Lee
Reported
2014-03-08 20:14:14 PST
Undefined symbols for architecture armv7: "__ZN6WebKit14NetworkProcess24platformLowMemoryHandlerEb", referenced from: __ZN6WebKit14NetworkProcess16lowMemoryHandlerEb in NetworkProcess.o
Attachments
Patch
(1.35 KB, patch)
2014-03-08 20:18 PST
,
Jon Lee
simon.fraser
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jon Lee
Comment 1
2014-03-08 20:16:21 PST
This was the patch for
bug 129977
Jon Lee
Comment 2
2014-03-08 20:18:05 PST
Created
attachment 226247
[details]
Patch
Jon Lee
Comment 3
2014-03-08 20:27:04 PST
Committed
r165347
: <
http://trac.webkit.org/changeset/165347
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug