iOS broken after r165342 https://bugs.webkit.org/show_bug.cgi?id=129987

Reviewed by Simon Fraser.

* NetworkProcess/ios/NetworkProcessIOS.mm:
(WebKit::NetworkProcess::platformLowMemoryHandler): Add missing stub implementation for
platformLowMemoryHandler().

Canonical link: https://commits.webkit.org/147973@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@165347 268f45cc-cd09-0410-ab3c-d52691b4dbfc