Source/WebKit2/NetworkProcess/ios/NetworkProcessIOS.mm
@@ -71,6 +71,11 @@ void NetworkProcess::clearCacheForAllOrigins(uint32_t)
 {
 }
 
+void NetworkProcess::platformLowMemoryHandler(bool)
+{
+    notImplemented();
+}
+
 void NetworkProcess::platformInitializeNetworkProcess(const NetworkProcessCreationParameters&)
 {
     notImplemented();
